--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
+
 .App {
   text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+.App h1{
+  margin-top: 60px;
+}
+.App .Instructions{
+  padding: 10px;
 }
 
 .App-logo {
@@ -28,11 +37,7 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+label {
+  user-select: none;
 }
