--- a/src/fileBrowser.css
+++ b/src/fileBrowser.css
@@ -3,7 +3,8 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin-top: 50px;
+    padding: 10px;
+    margin-top: 30px;
     margin-bottom: 30px;
   }
   
