--- a/src/navbar.css
+++ b/src/navbar.css
@@ -4,13 +4,13 @@
   padding: 15px;
 }
 
-.container {
+.nav-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.logo {
+.nav-logo {
   color: #fff;
   text-decoration: none;
   font-size: 24px;
