--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   text-align: center;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 .App h1{
   margin-top: 60px;
