--- a/src/footer.css
+++ b/src/footer.css
@@ -1,20 +1,23 @@
 .footer {
-    background-color: #333;
     color: #fff;
-    padding: 5px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    margin-top: auto;
+    margin-bottom: 10px;
+    padding-top: 150px;
   }
   
   .footer-container {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 20px;
   }
   
-  .gh-icon {
-    height: 20px;
-    margin-right: 10px;
+  .gh-icon-anim {
+    height: 25px;
+  }
+  
+  .contact-link{
+    text-decoration: none;
+    color: grey;
   }
   
