--- a/src/navbar.css
+++ b/src/navbar.css
@@ -1,13 +1,14 @@
 .navbar {
   background-color: #333;
   color: #fff;
-  padding: 15px;
+  width: 100%;
 }
 
 .nav-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 15px;
 }
 
 .nav-logo {
