--- a/src/footer.css
+++ b/src/footer.css
@@ -1,8 +1,7 @@
 .footer {
-    color: #fff;
     margin-top: auto;
     margin-bottom: 10px;
-    padding-top: 150px;
+    width: 100%;
   }
   
   .footer-container {
